[project]
name = "nbx-agent-compliance"
version = "0.1.0"
description = "A lean NetBox compliance agent using MCP and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.3.0",
    "litellm>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nbx-agent-compliance = "nbx_agent_compliance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nbx_agent_compliance"]